<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MercadoLibre</string>
    <string name="hint_UserName">Nombre Usuario</string>
    <string name="hint_Password">Contraseña</string>
    <string name="strLogin">Login</string>
    <string name="strNoTieneCuenta">No tiene cuenta?</string>
    <string name="strCreaUna">Cree una aquí</string>
    <string name="strEtiqLogo">MercadoLibre</string>
    <string name="title_activity_main2">MainActivity2</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_acrivity_splash">acrivity_splash</string>

    <!-- Crear cuenta strings -->
    <string name="hintUserEmail">Ingrese su correo electrónico</string>
    <string name="hintUsername">Ingrese su nombre de usuario</string>
    <string name="hintUserPass">Ingrese su contraseña</string>
    <string name="hintUserPassConfirm">Confirme su contraseña</string>
    <string name="strCrearCuenta">Crear cuenta</string>
    <string name="strEmailRequired">El email es un valor requerido</string>
    <string name="strPassRequired">La contraseña es un valor requerido</string>
    <string name="strPassConfirmRequired">Debe ingresar la confirmación de contraseña</string>
    <string name="strPassEquals">Ambas contraseñas deben coincidir</string>
    <string name="strErrorInValidate">Error al validar</string>
    <string name="strRegistred">El usuario ha sido creado</string>
    <string name="strNotRegistered">El usuario no ha sido creado</string>
    <string name="strUserTooLong">El nombre no debe superar los 15 caracteres</string>
    <string name="strPassTooLongShort">La contraseña debe contener entre 3 y 8 caracteres</string>
    <string name="strPassTooWeak">La contraseña es muy débil</string>

    <!-- Iniciar sesión strings -->
    <string name="strInexistentUser">El usuario no existe</string>

    <!-- Barra de navegación strings -->
    <string name="strInicio">Inicio</string>
    <string name="strCarrito">Carrito</string>
    <string name="strNotificaciones">Notificaciones</string>

    <!-- Galería -->
    <string name="strContenidoImagen">Imagen</string>
    <string name="strTituloCarrito">La compra mágica</string>
    <string name="strLike">Me gusta</string>
    <string name="strPrecioArticulo" translatable="false">1200</string>
    <string name="strMonedaArticulo" translatable="false">C$</string>
    <string name="strVendedorArticulo" translatable="false">Julanito de tal</string>

    <!-- Fragment inicio -->
    <string name="strInicioPresentacion1">Envíos gratis en 24 horas.</string>
    <string name="strInicioPresentacion2">Compra hoy y recibe mañana.</string>

    <!-- Detalles carrito -->
    <string name="strNombreVendedor" translatable="false">Fulanito de tal</string>
    <string name="strCategoriaCarrito">En venta</string>

    <!-- Generados automáticamente -->
    <string name="strActivityMenu">MenuActivity</string>
    <string name="strCuenta">Cuenta</string>
    <string name="strTituloEvento">Subasta de cuerno de mamut</string>
    <string name="strCategoriaNotificacion">Subasta</string>
    <string name="strDescripcionArticulo">Este artículo está en venta. Este artículo está en venta. Este artículo está en venta. Este artículo está en venta.</string>

    <!-- Pantalla Ubicacion -->
    <string name="hello_blank_fragment" tools:ignore="MissingTranslation">Hello blank fragment</string>
    <string name="strUbicacion">Ubicacion</string>
    <string name="strdefault_hora" translatable="false">00:00</string>
    <string name="strdefault_AM" translatable="false">A.M.</string>
    <string name="transition_galeriadet" translatable="false">No se</string>

    <!-- Pantalla ubicacion determinada -->
    <string name="strUbicacionEvento">San juan</string>
    <string name="strDireccionEvento">Del hotel los malandros</string>
    <string name="strSitioWebEvento">www.uni.edu.ni</string>
    <string name="strTelefonoEvento">0000-0000</string>
    <string name="strTodo">TODO</string>
    <string name="strCategoriaVendedor">Vendedor de muebles</string>
    <string name="strPaisVendedor" translatable="false">Nicaragua</string>
    <string name="strUsuarios">Users</string>
    <string name="strAcercaUsuario">Acerca de.</string>
    <string name="strDescripcionUsuario">Usuario, usuario, usuario, usuario, usuario, usuario, usuario.</string>
    <string name="strCuentaTwitter">\@usuario</string>
    <string name="strGaleria">Galería</string>
</resources>