<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/tam3"
    android:layout_marginBottom="@dimen/margen8"
    app:cardCornerRadius="@dimen/margen4">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imgCompras"
            android:layout_width="match_parent"
            android:layout_height="@dimen/tam3"
            android:background="@drawable/mercadolibre1"
            android:contentDescription="@string/strContenidoImagen"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:background="@drawable/mercadolibre1"
            android:orientation="vertical"
            android:paddingStart="@dimen/margen3"
            android:paddingBottom="@dimen/margen8"
            android:gravity="bottom"
            tools:ignore="RtlSymmetry">

            <TextView
                android:id="@+id/tvVendedorArticulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strVendedorArticulo"
                android:textColor="@color/black"
                android:textSize="@dimen/tamtexto2" />

            <TextView
                android:id="@+id/tvTituloArticulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strTituloCarrito"
                android:textColor="@color/black"
                android:textSize="@dimen/tamtexto3" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkLikeArticulo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/checkbox_selector" />

                <TextView
                    android:id="@+id/tvLikeArticulo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margen8"
                    android:text="@string/strLike"
                    android:textColor="@color/black"
                    android:textSize="@dimen/tamtexto3" />

                <TextView
                    android:id="@+id/tvPrecioArticulo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margen8"
                    android:text="@string/strPrecioArticulo"
                    android:textColor="@color/black"
                    android:textSize="@dimen/tamtexto3"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvMonedaArticulo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margen8"
                    android:text="@string/strMonedaArticulo"
                    android:textColor="@color/black"
                    android:textSize="@dimen/tamtexto3"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>
    </FrameLayout>
</androidx.cardview.widget.CardView>