<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user.UserDetalleFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:startDestination="@+id/navigation_home">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/abDetalleUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tbDetalleUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/Theme.ArteLista2"
        tools:context=".ui.user.UserDetalleFragment">

        <ImageView
            android:id="@+id/imgUsuarioDetalle"
            android:layout_width="@dimen/margen7"
            android:layout_height="@dimen/margen7"
            android:background="@drawable/img_palacio"
            android:layout_marginTop="@dimen/margen7"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:contentDescription="@string/strUsuarios"/>
        <TextView
            android:id="@+id/tvNombreUsuarioDetalle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/strNombreVendedor"
            android:textSize="@dimen/tamtexto2"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgUsuarioDetalle"/>
        <TextView
            android:id="@+id/tvPaisUsuarioDetalle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gris_oscuro"
            android:text="@string/strPaisVendedor"
            android:textSize="@dimen/tamtexto2"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvNombreUsuarioDetalle"/>
        <TextView
            android:id="@+id/tvAcercaUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/secondary_color"
            android:text="@string/strAcercaUsuario"
            android:textSize="@dimen/tamtexto3"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPaisUsuarioDetalle"/>
         <Button
             android:id="@+id/btnAcercaDe"
             android:layout_width="@dimen/margen6"
             android:layout_height="@dimen/margen6"
             android:background="@drawable/ic_flecha_abajo"
             android:contentDescription="@string/strLike"
             app:layout_constraintTop_toBottomOf="@id/tvAcercaUsuario"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"/>
        <TextView
            android:id="@+id/tvDescripcionArtista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margen8"
            android:padding="@dimen/margen8"
            android:text="@string/strDescripcionUsuario"
            android:textSize="@dimen/tamtexto2"
            android:textAlignment="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnAcercaDe"/>
        <ImageView
            android:id="@+id/imgTwitter"
            android:layout_width="@dimen/margen7"
            android:layout_height="@dimen/margen7"
            android:background="@mipmap/img_twitter_foreground"
            android:scaleType="centerCrop"
            android:layout_marginTop="@dimen/margen7"
            app:layout_constraintTop_toBottomOf="@id/btnAcercaDe"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:contentDescription="@string/strTodo"/>
        <TextView
            android:id="@+id/tvTwitterCuenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strCuentaTwitter"
            android:textSize="@dimen/tamtexto1"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/imgTwitter"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>