<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgCompras"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/mercadolibre1"
        android:contentDescription="@string/strContenidoImagen"
        android:scaleType="centerCrop"
        tools:ignore="ImageContrastCheck" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:paddingStart="@dimen/margen3"
        android:paddingBottom="@dimen/margen8"
        android:background="@drawable/mercadolibre1"
        tools:ignore="RtlSymmetry">

        <TextView
            android:id="@+id/tvTituloVendedor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:textSize="@dimen/tamtexto3" />

        <TextView
            android:id="@+id/tvTituloArtitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strTituloCarrito"
            android:textColor="@color/white"
            android:textSize="@dimen/tamtexto2" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/checkLikeArticulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/checkbox_selector"/>

            <TextView
                android:id="@+id/tvLikeArticulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strLike"
                android:textSize="@dimen/tamtexto3"
                android:textColor="@color/white"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/margen8" />

            <TextView
                android:id="@+id/tvPrecioArticulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strPrecioArticulo"
                android:textSize="@dimen/tamtexto3"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/margen8" />

            <TextView
                android:id="@+id/tvMonedaArticulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strMonedaArticulo"
                android:textSize="@dimen/tamtexto3"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/margen8" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
</androidx.cardview.widget.CardView>