<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/tam1"
    android:padding="@dimen/margen5"
    android:background="@drawable/shape_corner">

    <TextView
        android:id="@+id/tvNotificationHora"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/margen2"
        android:text="@string/strdefault_hora"
        android:textAlignment="center"
        android:textColor="@color/primary_variant"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/tvNotificationAM"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/margen2"
        android:text="@string/strdefault_AM"
        android:textAlignment="center"
        android:textColor="@color/primary_variant"
        android:textSize="@dimen/tamtexto1"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/tvNotificationHora"
        app:layout_constraintTop_toBottomOf="@id/tvNotificationHora"
        tools:ignore="TextSizeCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/tvTituloNotification"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/margen2"
        android:text="@string/strTituloEvento"
        android:textAlignment="center"
        android:textSize="@dimen/tamtexto1"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/margen5"
        app:layout_constraintLeft_toRightOf="@id/tvNotificationHora"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/tvCategoriaNotification"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/margen2"
        android:text="@string/strCategoriaNotificacion"
        android:textAlignment="center"
        android:textSize="@dimen/tamtexto1"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/tvTituloNotification"
        app:layout_constraintTop_toBottomOf="@id/tvTituloNotification"
        tools:ignore="TextSizeCheck" />



</androidx.constraintlayout.widget.ConstraintLayout>