<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.artelista.ui.home.HomeFragment"
        android:label="@string/strInicio"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_shopping_cart"
        android:name="com.example.artelista.ui.carrito.CarritoFragment"
        android:label="@string/strCarrito"
        tools:layout="@layout/fragment_carrito" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.artelista.ui.notifications.NotificationsFragment"
        android:label="@string/strNotificaciones"
        tools:layout="@layout/fragment_notifications" >
        <action
            android:id="@+id/action_navigation_notifications_to_ubicacionFragment"
            app:destination="@id/ubicacionFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_user"
        android:name="com.example.artelista.ui.notifications.NotificationsFragment"
        android:label="@string/strNotificaciones"
        tools:layout="@layout/fragment_user" />
    <fragment
        android:id="@+id/ubicacionFragment"
        android:name="com.example.artelista.ui.UbicacionFragment"
        android:label="fragment_ubicacion"
        tools:layout="@layout/fragment_ubicacion" >
        <action
            android:id="@+id/action_ubicacionFragment_to_ubicaiondetFragment"
            app:destination="@id/ubicaiondetFragment" />
    </fragment>
    <fragment
        android:id="@+id/ubicaiondetFragment"
        android:name="com.example.artelista.ui.UbicaiondetFragment"
        android:label="fragment_ubicaiondet"
        tools:layout="@layout/fragment_ubicaiondet" />
</navigation>