<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ActivityCrearCuenta">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tbCrearCuenta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/strCrearCuenta"/>

    </com.google.android.material.appbar.AppBarLayout>

    

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margen6"
        android:layout_marginLeft="@dimen/margen4"
        android:layout_marginTop="120dp"
        android:layout_marginRight="@dimen/margen4"
        android:background="@drawable/rounded_corner2"
        android:drawableLeft="@drawable/ic_user"
        android:drawablePadding="@dimen/margen5"
        android:hint="@string/hintUsername"
        android:textColorHint="@color/black"
        android:inputType="textPersonName"
        android:paddingLeft="@dimen/margen4"
        android:textColor="@color/black"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editEmail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margen6"
        android:layout_marginLeft="@dimen/margen4"
        android:layout_marginRight="@dimen/margen4"
        android:background="@drawable/rounded_corner2"
        android:drawableLeft="@drawable/ic_mail"
        android:drawablePadding="@dimen/margen5"
        android:hint="@string/hintUserEmail"
        android:inputType="textEmailAddress"
        android:paddingLeft="@dimen/margen4"
        android:layout_marginTop="@dimen/margen3"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editName" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margen6"
        android:layout_marginLeft="@dimen/margen4"
        android:layout_marginRight="@dimen/margen4"
        android:background="@drawable/rounded_corner2"
        android:drawableLeft="@drawable/ic_password"
        android:drawablePadding="@dimen/margen5"
        android:hint="@string/hintUserPass"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/margen4"
        android:layout_marginTop="@dimen/margen3"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editEmail" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editPasswordConfirm"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margen6"
        android:layout_marginLeft="@dimen/margen4"
        android:layout_marginRight="@dimen/margen4"
        android:background="@drawable/rounded_corner2"
        android:drawableLeft="@drawable/ic_password"
        android:drawablePadding="@dimen/margen5"
        android:hint="@string/hintUserPassConfirm"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/margen4"
        android:layout_marginTop="@dimen/margen3"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPassword" />

    <Button
        android:id="@+id/btnSingin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margen3"
        android:layout_marginRight="@dimen/margen3"
        android:backgroundTint="@color/primary_color"
        android:hint="@string/strCrearCuenta"
        android:textColor="@color/white"
        android:background="@drawable/rounded_corner"
        android:textSize="@dimen/tamtexto2"
        android:layout_marginTop="@dimen/margen4"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPasswordConfirm" />

</androidx.constraintlayout.widget.ConstraintLayout>